# summarizer

./: .gitignore  README.md  de.haigruppe.summarizer.json  de.haigruppe.summarizer.yml  meson.build  setup.py  setup_win32.py  summarizer.spec
.github/workflows/: flatpak.yml
data/: de.haigruppe.summarizer.desktop  de.haigruppe.summarizer.metainfo.xml  meson.build
data/resources/: meson.build  summarizer.gresource.xml
data/resources/ui/: shortcuts.ui
docs/: windows.md
src/: main.py  meson.build  summarizer.in  text_summarize.py  ui.py
src/ui/: main.py  widgets.py
tests/: stallman-copypasta-rebuttal  stallman-copypasta-rebuttal2  test-en.txt
