subdir('resources')

install_data(
  'de.haigruppe.summarizer.desktop',
  install_dir: join_paths(get_option('datadir'), 'applications')
)

install_data(
  'de.haigruppe.summarizer.svg',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
)

install_data(
  'de.haigruppe.summarizer.metainfo.xml',
  install_dir: join_paths(get_option('datadir'), 'metainfo')
)
